--- a/www/triangle.html
+++ b/www/triangle.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <canvas></canvas>
+    <canvas width="512" height="512"></canvas>
     <script src="../src/Triangle.bs.js"></script>
 </body>
 
