--- a/triangle.html
+++ b/triangle.html
@@ -1,2 +1,2 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Triangle</title></head><body> <canvas></canvas> <script src="Triangle.bs.5ef1bf62.js"></script>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Triangle</title></head><body> <canvas width="512" height="512"></canvas> <script src="Triangle.bs.3623adfb.js"></script>
 </body></html>
