--- a/www/square.html
+++ b/www/square.html
@@ -4,14 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>webgl.bs</title>
+    <title>Square</title>
 </head>
 
 <body>
-    <ul>
-        <li><a href="triangle.html">Triangle</a></li>
-        <li><a href="square.html">Square</a></li>
-    </ul>
+    <canvas width="512" height="512"></canvas>
+    <script src="../src/Square.bs.js"></script>
 </body>
 
 </html>
