--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>webgl.bs</title></head><body> <ul> <li><a href="triangle.html">Triangle</a></li> </ul>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>webgl.bs</title></head><body> <ul> <li><a href="triangle.html">Triangle</a></li> <li><a href="square.html">Square</a></li> </ul>
 </body></html>
