Add Sierpinski Gasket Points

--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,9 @@
         <li><a href="triangle.html">Triangle</a></li>
         <li><a href="square.html">Square</a></li>
     </ul>
+    <ul>
+        <li><a href="sierpinski_points.html">Sierpinski Gasket Points</a></li>
+    </ul>
 </body>
 
 </html>
