--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
     </ul>
     <ul>
         <li><a href="sierpinski_points.html">Sierpinski Gasket Points</a></li>
+        <li><a href="sierpinski.html">Sierpinski Points</a></li>
     </ul>
 </body>
 
