Sierpinski Gasket Points 3D

--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
     <ul>
         <li><a href="sierpinski_points.html">Sierpinski Gasket Points</a></li>
         <li><a href="sierpinski.html">Sierpinski Points</a></li>
+        <li><a href="sierpinski_points_3d.html">Sierpinski Gasket Points 3D</a></li>
     </ul>
 </body>
 
