--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
     </ul>
     <ul>
         <li><a href="sierpinski_points.html">Sierpinski Gasket Points</a></li>
-        <li><a href="sierpinski.html">Sierpinski Points</a></li>
+        <li><a href="sierpinski.html">Sierpinski Gasket</a></li>
         <li><a href="sierpinski_points_3d.html">Sierpinski Gasket Points 3D</a></li>
     </ul>
 </body>
