--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
         <li><a href="sierpinski.html">Sierpinski Gasket</a></li>
         <li><a href="sierpinski_points_3d.html">Sierpinski Gasket Points 3D</a></li>
         <li><a href="sierpinski_3d.html">Sierpinski Gasket 3D</a></li>
+        <li><a href="twist.html">Twist</a></li>
     </ul>
 </body>
 
