Add rotating square

--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,9 @@
         <li><a href="sierpinski_3d.html">Sierpinski Gasket 3D</a></li>
         <li><a href="twist.html">Twist</a></li>
     </ul>
+    <ul>
+        <li><a href="rotating_square.html">Rotating Square</a></li>
+    </ul>
 </body>
 
 </html>
