Rotating Square with Controls

--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
     </ul>
     <ul>
         <li><a href="rotating_square.html">Rotating Square</a></li>
+        <li><a href="rotating_square_controls.html">Rotating Square With Controls</a></li>
     </ul>
 </body>
 
