--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
     <ul>
         <li><a href="rotating_square.html">Rotating Square</a></li>
         <li><a href="rotating_square_controls.html">Rotating Square With Controls</a></li>
+        <li><a href="pixels.html">Pixels</a></li>
     </ul>
 </body>
 
