--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
         <li><a href="rotating_square.html">Rotating Square</a></li>
         <li><a href="rotating_square_controls.html">Rotating Square With Controls</a></li>
         <li><a href="pixels.html">Pixels</a></li>
+        <li><a href="triangles.html">Triangles</a></li>
     </ul>
 </body>
 
