--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
         <li><a href="rotating_square_controls.html">Rotating Square With Controls</a></li>
         <li><a href="pixels.html">Pixels</a></li>
         <li><a href="triangles.html">Triangles</a></li>
+        <li><a href="cad.html">CAD</a></li>
     </ul>
 </body>
 
