--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>webgl.bs</title>
+    <title>webgl.res</title>
 </head>
 
 <body>
