deploy: dc6a9c30270314ae74caae467b5f252b79e4c482

--- a/sierpinski.html
+++ b/sierpinski.html
@@ -1,2 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Sierpinski Gasket</title></head><body> <canvas width="512" height="512"></canvas> <script src="Sierpinski.bs.db755a1e.js"></script>
-</body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Sierpinski Gasket</title></head><body> <canvas width="512" height="512"></canvas> <script src="Sierpinski.bs.0a7a3b54.js"></script> </body></html>
