--- a/sierpinski_3d.html
+++ b/sierpinski_3d.html
@@ -1,2 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Sierpinski Gasket 3D</title></head><body> <canvas width="512" height="512"></canvas> <script src="Sierpinski3D.bs.57f525c7.js"></script>
-</body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Sierpinski Gasket 3D</title></head><body> <canvas width="512" height="512"></canvas> <script src="Sierpinski3D.bs.1751f07a.js"></script> </body></html>
