--- a/square.html
+++ b/square.html
@@ -1,2 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Square</title></head><body> <canvas width="512" height="512"></canvas> <script src="Square.bs.ddc76a85.js"></script>
-</body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Square</title></head><body> <canvas width="512" height="512"></canvas> <script src="Square.bs.748f5c24.js"></script> </body></html>
