--- a/sierpinski_points.html
+++ b/sierpinski_points.html
@@ -1,2 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Sierpinski Gasket Points</title></head><body> <canvas width="512" height="512"></canvas> <script src="SierpinskiPoints.bs.df7a87f3.js"></script>
-</body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Sierpinski Gasket Points</title></head><body> <canvas width="512" height="512"></canvas> <script src="SierpinskiPoints.bs.f3192167.js"></script> </body></html>
