--- a/sierpinski_points_3d.html
+++ b/sierpinski_points_3d.html
@@ -1,2 +1,1 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Sierpinski Gasket Points 3D</title></head><body> <canvas width="512" height="512"></canvas> <script src="SierpinskiPoints3D.bs.cddf78cd.js"></script>
-</body></html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Sierpinski Gasket Points 3D</title></head><body> <canvas width="512" height="512"></canvas> <script src="SierpinskiPoints3D.bs.dc9272b6.js"></script> </body></html>
